# momento

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md  index.html  privacy.html
momento/: __init__.py  __main__.py  config.py
momento/core/: audio_loopback.py  bookmarks.py  encoder.py  encoders.py  game_names.py  game_watcher.py  media_probe.py  mic_capture.py  mic_monitor.py  recorder.py  session.py  storage_cleanup.py  thumbnails.py  video_capture.py
momento/trim/: ffmpeg_trim.py
momento/ui/: editor.py  level_meter.py  preview.py  recordings_list.py  settings_dialog.py  status_panel.py  theme.py  timeline.py  toast.py  tray.py  welcome.py  widgets.py  youtube_upload_dialog.py  youtube_upload_progress.py
momento/util/: autostart.py  dpapi.py  ffmpeg_path.py  format.py  hotkey.py  logging_setup.py  paths.py  resources.py  screen.py  single_instance.py  time_format.py  windows_api.py
momento/youtube/: __init__.py  auth.py  uploader.py
resources/: known_games.json
resources/youtube/: README.md
tests/: check_ffmpeg.py  check_game_names.py  check_games_list.py  check_mkv_playback.py  check_pyav_nvenc.py  make_bookmark_sound.py  make_icon.py  screenshot_editor.py  screenshot_settings.py  seed_config.py  smoke_editor.py  smoke_encoder.py  smoke_recorder.py  smoke_settings.py  smoke_single_instance.py  smoke_thumbpool.py  smoke_toast.py  smoke_tray.py  smoke_trim.py  smoke_watcher.py  smoke_wgc.py  smoke_window_state.py  test_quick_capture.py  test_session.py  test_wasapi_capture.py  test_watcher.py  test_window_recording.py
